--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>FlappyBird</title>
+    <link href="style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <canvas id="canvas" width="288px" height="512px">
+    <div id = "box">
+      <h1>Flappy Bird</h1>
+      <canvas id="canvas" width="720px" height="512px">
 
-    </canvas>
+      </canvas>
+    </div>
     <script src="flappy.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
