--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>FlappyBird</title>
     <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Monoton|Play|Poiret+One|Press+Start+2P|VT323" rel="stylesheet"> 
   </head>
   <body>
     <div id = "box">
